--- a/index.html
+++ b/index.html
@@ -98,5 +98,7 @@
     Co-op developer: Itzblack trum web developer <a href="https://itzblack.carrd.co/" target="_blank" >Carrd</a>
     <br>
     Sound effects by <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjx6taC8-6HAxXAk1YBHRk6CTgQFnoECBsQAQ&url=https%3A%2F%2Fwww.youtube.com%2F%40raxdflipnote&usg=AOvVaw1DNMJWvHHhlwnBcP7DudSR&opi=89978449" target="_blank">raxdflipnote</a>
+    <br>
+    Have a look at  <a href="https://itzblack6093.github.io/guessNumber/" target="_blank" >our first project</a>
 </body>
 </html>
