--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br>
     <p id="thongBao" style="size: 50px;"> </p>
     <div>
-    <button onclick="randomNum();;"  style="width: 120px; height: 50px;border-radius: 10px;background-color: rgb(54, 147, 240);">Go gambling!</button>
+    <button id="gamb" onclick="randomNum();;"  style="width: 120px; height: 50px;border-radius: 10px;background-color: rgb(54, 147, 240);">Go gambling!</button>
     <button onclick="sellShield();updateDisplayShield();updateDisplayBalance()" style="width: 175px; height: 50px;border-radius: 10px;background-color: rgb(241, 122, 122);">Sell 1 shield = $750</button>
     </div>
     <br><hr>
