--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         <img src="imagies/dongluc1.png">
         <img src="imagies/dongluc2.jfif" width="550px">
          <hr> <br>
-    Page developer: <a href="http://facebook.com/nguyenthekhai7749" target="_blank">Facebook</a> <a href="http://discord.com/users/983387837800005652" target="_blank">Discord</a> 
+    Page developer:a khai dep trai | <a href="http://facebook.com/nguyenthekhai7749" target="_blank">Facebook</a> | <a href="http://discord.com/users/983387837800005652" target="_blank">Discord</a> 
     <br>
-    Co-op developer: Itzblack trum web developer <a href="https://itzblack.carrd.co/" target="_blank" >Carrd</a>
+    Co-op developer: Itzblack trum web developer | <a href="https://itzblack.carrd.co/" target="_blank" >Carrd</a>
     <br>
     Sound effects by <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjx6taC8-6HAxXAk1YBHRk6CTgQFnoECBsQAQ&url=https%3A%2F%2Fwww.youtube.com%2F%40raxdflipnote&usg=AOvVaw1DNMJWvHHhlwnBcP7DudSR&opi=89978449" target="_blank">raxdflipnote</a>
     <br>
