--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <br><hr>
     <h2>RULES</h2>
     <h4>$50 each time<br>
-    Line up 3 icons to earn corresponding prize in the table below.<br>
+    Line up 3 icons to earn corresponding prize in the table below (middle row).<br>
     You earn $100 every 10 turns</h4>
 
         <div class="table_component" role="region" tabindex="0">
