Added metadata index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1272755101991440456/1272763665174495243/Khong_Co_Tieu_e2_20240813104814.png?ex=66bc2908&is=66bad788&hm=9d6eee4646dddb2e11d7b6c38071c790032b2be32419ed45c53afd8f7383141d&">
+    <meta property="twitter:image" content="https://cdn.discordapp.com/attachments/1272755101991440456/1272763665174495243/Khong_Co_Tieu_e2_20240813104814.png?ex=66bc2908&is=66bad788&hm=9d6eee4646dddb2e11d7b6c38071c790032b2be32419ed45c53afd8f7383141d&">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="720">
+    <meta name="og:title" content="Slot machine!">
+    <meta name="description" content="Ye... A slot machine, but friendlier">
+    <meta name="twitter:description" content="Ye... A slot machine, but friendlier">
     <title>Gamblink coin</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
