--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1272755101991440456/1272763665174495243/Khong_Co_Tieu_e2_20240813104814.png?ex=66bc2908&is=66bad788&hm=9d6eee4646dddb2e11d7b6c38071c790032b2be32419ed45c53afd8f7383141d&">
+    <meta property="twitter:image" content="https://cdn.discordapp.com/attachments/1272755101991440456/1272763665174495243/Khong_Co_Tieu_e2_20240813104814.png?ex=66bc2908&is=66bad788&hm=9d6eee4646dddb2e11d7b6c38071c790032b2be32419ed45c53afd8f7383141d&">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="720">
+    <meta name="og:title" content="Slot machine!">
+    <meta name="description" content="Yes... A slot machine">
+    <meta name="twitter:description" content="Yes... A slot machine">
     <title>Gamblink coin</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
